Surface CV in nav; fix dark-mode footer text contrast
- Footer text and links now render in white on dark mode (was dark text
  on light-cyan bg, unreadable). Switched dark-mode --global-footer-bg
  to the dark navy bg-color for cohesion, --global-footer-text and
  --global-footer-link to #ffffff.
- _pages/cv.md: nav: true, nav_order: 3 -> CV now appears in the top
  nav between publications and teaching.

--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -58,9 +58,9 @@ html[data-theme='dark'] {
   --global-theme-color: #{$orange-color};
   --global-hover-color: #{$light-orange-color};
   --global-hover-text-color: #{$white-color};
-  --global-footer-bg-color: #{$light-cyan-color};
-  --global-footer-text-color: #{$grey-color-dark};
-  --global-footer-link-color: #{$black-color};
+  --global-footer-bg-color: #{$blue-color-dark};
+  --global-footer-text-color: #{$white-color};
+  --global-footer-link-color: #{$white-color};
   --global-distill-app-color: #{$grey-color-light};
   --global-divider-color: #898996;
   --global-card-bg-color: #{$grey-900};
